Added get route to remove all documents from the articles collection

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+	<button><a href="/scrape">Scrape</a></button>
+	<button><a href="/articles">Articles</a></button>
+	<button><a href="/delete">Delete articles</a></button>
 	{{{ body }}}
 </body>
 
