--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>New Scraper w/Comments</title>
-	<script src="https://code.jquery.com/jquery.js"></script>
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -12,6 +16,8 @@
 	<button><a href="/articles">Articles</a></button>
 	<button><a href="/delete">Delete articles</a></button>
 	{{{ body }}}
+
+	<script src="https://code.jquery.com/jquery.js"></script>
 </body>
 
 </html>
