Added link field to the Article model, with corresponding scraping from Reuters

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,6 +7,7 @@
       <h3>{{title}}</h3>
       <p>{{content}}</p>
       <p>{{timestamp}}</p>
+      <a href="{{link}}" target="_blank">Read more</a>
     </div>
     {{/each}}
   </div>
