--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@ body {
   background-color: rgb(161, 193, 219);
   padding: 0.5rem 2rem;
   border-radius: 10px;
+  margin-bottom: 3rem;
 }
 
 .article {
