--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,11 +3,24 @@
 <div class="container">
   <div class="article-box">
     {{#each articles}}
-    <div class="article">
-      <h3>{{title}}</h3>
-      <p>{{content}}</p>
-      <p>{{timestamp}}</p>
-      <a href="{{link}}" target="_blank">Read more</a>
+
+    <div class="row article">
+      <div class="col-lg-3">
+        <img src="{{image}}" alt="story-image">
+
+      </div>
+      <div class="col-lg-9">
+        <h3>{{title}}</h3>
+        <p>{{content}}</p>
+        <p>{{timestamp}}</p>
+        <a href="{{link}}" target="_blank">Read more</a>
+      </div>
+    </div>
+
+
+
+    <div>
+
     </div>
     {{/each}}
   </div>
