--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,21 +6,15 @@
 
     <div class="row article">
       <div class="col-lg-3">
-        <img src="{{image}}" alt="story-image">
-
+        <img src="{{image}}" alt="">
       </div>
+
       <div class="col-lg-9">
         <h3>{{title}}</h3>
         <p>{{content}}</p>
         <p>{{timestamp}}</p>
         <a href="{{link}}" target="_blank">Read more</a>
       </div>
-    </div>
-
-
-
-    <div>
-
     </div>
     {{/each}}
   </div>
