View comments button now toggles the view of comments. Each 'view' click makes a new Ajax call to pick up any new comments

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,7 @@
           <textarea id="comment-field" type="text" name="comment" placeholder="comment"></textarea>
 
           <button id="add-comment">Add comment</button>
-          <button id="view-comments" data-id={{_id}}>View comments</button>
+          <button id="view-comments" data-id={{_id}} data-state="hidden">View comments</button>
         </form>
       </div>
 
