--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,14 +7,34 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+		integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-	<button><a href="/scrape">Scrape</a></button>
-	<button><a href="/articles">Articles</a></button>
-	<button><a href="/delete">Delete articles</a></button>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand">News Scraper</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="/scrape">Scrape</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/articles">View Articles</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/delete">Wipe DB</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
 	{{{ body }}}
 
 </body>
