--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
 					<a class="nav-link" href="/articles">View Articles</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="/delete">Wipe DB</a>
+					<a class="nav-link" id="delete">Wipe DB</a>
 				</li>
 			</ul>
 		</div>
