--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,8 +20,7 @@
 
 
       <form class="comment-form" action="/submit" method="post" data-id={{_id}}>
-        <textarea class="form-control" class="comment-field" type="text" name="comment"
-          placeholder="comment"></textarea>
+        <textarea class="form-control" class="comment-field" type="text" name="comment"></textarea>
         <button class="btn btn-outline-success form-btn" id="add-comment"><i class="fas fa-plus-square"></i>Add
           comment</button>
         <button class="btn btn-outline-primary form-btn" id="view-comments" data-id={{_id}} data-state="hidden"><i
