--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,11 +15,10 @@
 
 <body>
 	<nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand">News Scraper</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+		<a class="navbar-brand">
+			<img src="imgs/reuters.png" width="30" height="30" class="d-inline-block align-top" alt="">
+			Reuters News Scraper
+		</a>
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
@@ -33,6 +32,7 @@
 					<a class="nav-link" id="delete">Wipe DB</a>
 				</li>
 			</ul>
+
 		</div>
 	</nav>
 	{{{ body }}}
